aj-572 PR comments