@@ -115,9 +115,7 @@ public class RecordController {
 			@PathVariable("version") String version, @PathVariable("recordType") RecordType recordType,
 			@PathVariable("recordId") RecordId recordId) {
 		validateVersion(version);
-		if (!recordDao.instanceSchemaExists(instanceId)) {
-			throw new MissingObjectException("Instance");
-		}
+		validateInstance(instanceId);
 		validateRecordType(instanceId, recordType.getName());
 		Record result = recordDao
 				.getSingleRecord(instanceId, recordType, recordId,
@@ -196,12 +194,10 @@ public class RecordController {
 	public ResponseEntity<List<RecordTypeSchema>> describeAllRecordTypes(@PathVariable("instanceId") UUID instanceId,
 			@PathVariable("v") String version) {
 		validateVersion(version);
-		if (!recordDao.instanceSchemaExists(instanceId)) {
-			throw new MissingObjectException("Instance");
-		}
+		validateInstance(instanceId);
 		List<String> allRecordTypes = recordDao.getAllRecordTypes(instanceId);
 		List<RecordTypeSchema> result = allRecordTypes.stream()
-				.map(recordType -> getSchemaDescription(instanceId, recordType)).collect(Collectors.toList());
+				.map(recordType -> getSchemaDescription(instanceId, recordType)).toList();
 		return new ResponseEntity<>(result, HttpStatus.OK);
 	}
 
@@ -232,6 +228,12 @@ public class RecordController {
 	private void validateRecordType(UUID instanceId, String recordTypeName) {
 		if (!recordDao.recordTypeExists(instanceId, recordTypeName)) {
 			throw new MissingObjectException("Record type");
+		}
+	}
+
+	private void validateInstance(UUID instanceId) {
+		if (!recordDao.instanceSchemaExists(instanceId)) {
+			throw new MissingObjectException("Instance");
 		}
 	}
 
